--- a/app/assets/stylesheets/updated/layouts/help.scss
+++ b/app/assets/stylesheets/updated/layouts/help.scss
@@ -26,6 +26,10 @@
 
 .article-content {
   margin-bottom: $spacing-1;
+
+  ul {
+    margin-bottom: $spacing-3;
+  }
 }
 
 .article-index {
